--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <!-- <script type="text/javascript" src="essai2.js"></script> -->
+    <script type="text/javascript" src="essai2.js"></script>
     <link rel="stylesheet" type="text/css" href="essai.css" />
     <script type="application/javascript">
 
